<resources>
    <string name="app_name">FinalProject</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="all_products">All products</string>
    <string name="shopping_list">Shopping list</string>
    <string name="product_image">Product Image</string>
    <string name="product_name">Product Name</string>
    <string name="product_name_all">Product Name</string>
    <string name="add_to_shopping_list">Add to Shopping List</string>
    <string name="add_product">Add Product</string>
    <string name="add_product_title">Add product</string>
    <string name="category">Category</string>
    <string name="product_name_label">Product Name</string>
    <string name="select_category_prompt"> Select Category</string>
</resources>